--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_vista_orden_compra.xml
@@ -12,54 +12,54 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="@string/title_orden_compra"
-            android:textColor="@color/colorTextLogin"
-            android:textSize="20dp"
-            android:textStyle="italic" />
-
-        <Spinner
-            android:id="@+id/spinner_orden_compra"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25dp"
-            android:paddingBottom="10dp"
-            android:textColor="@color/colorTextLogin"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
             <TextView
-                android:id="@+id/textFecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:layout_weight="1"
-                android:text="@string/seleccionar_fecha"
+                android:text="@string/title_orden_compra"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:textStyle="italic" />
 
-            <ImageButton
-                android:id="@+id/imageBtnFecha"
-                android:src="@drawable/calendar"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@color/colorBackgroundLogin"/>
+            <Spinner
+                android:id="@+id/spinner_orden_compra"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/colorTextLogin"/>
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textFecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="@string/seleccionar_fecha"
+                    android:textColor="@color/colorTextLogin"
+                    android:textSize="20dp" />
+
+                <ImageButton
+                    android:id="@+id/imageBtnFecha"
+                    android:src="@drawable/calendar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@color/colorBackgroundLogin"/>
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -86,12 +86,100 @@
                 android:textSize="20dp" />
 
             <TableLayout
+                android:id="@+id/tableProductos"
+                android:stretchColumns="0,1,2,3,4,5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TableRow>
-                    a
+                <TableRow
+                    android:background="@color/colorPrimary"
+                    android:padding="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/producto"
+                        android:textColor="@color/colorTextButtonLogin"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/cantidad"
+                        android:textColor="@color/colorTextButtonLogin"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/abr_unidad_medida"
+                        android:textColor="@color/colorTextButtonLogin"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/precio"
+                        android:textColor="@color/colorTextButtonLogin"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/porcentaje_desc"
+                        android:textColor="@color/colorTextButtonLogin"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/importe"
+                        android:textColor="@color/colorTextButtonLogin"/>
                 </TableRow>
             </TableLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/subtotal"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/iva"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/total"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="20dp" />
+        </LinearLayout>
 
 
         </LinearLayout>
