--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registrar_papeleta.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registrar_papeleta.xml
@@ -31,12 +31,29 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/spinner_num_compra"
+                android:text="@string/spinner_num_compra_expedidor"
                 android:textColor="@color/colorTextLogin"
                 android:textSize="25dp" />
 
             <Spinner
-                android:id="@+id/spinner_orden_compra"
+                android:id="@+id/spinner_orden_compra_expedidor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/colorTextLogin"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/spinner_num_compra_porteador"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="25dp" />
+
+            <Spinner
+                android:id="@+id/spinner_orden_compra_porteador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="25dp"
@@ -141,39 +158,35 @@
                     android:textColor="@color/colorTextLogin"/>
             </android.support.design.widget.TextInputLayout>
 
-            <TextView
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_expedidor"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/nombre_expedidor"
-                android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:layout_height="wrap_content">
+                <EditText android:id="@+id/input_nombre_expedidor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="25dp"
+                    android:paddingBottom="15dp"
+                    android:inputType="text"
+                    android:hint="@string/nombre_expedidor"
+                    android:textColorHint="@color/colorTextLogin"
+                    android:textColor="@color/colorTextLogin"/>
+            </android.support.design.widget.TextInputLayout>
 
-            <Spinner
-                android:id="@+id/spinner_expedidor"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_porteador"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="25dp"
-                android:paddingBottom="10dp"
-                android:textColor="@color/colorTextLogin"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/nombre_porteador"
-                android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
-
-            <Spinner
-                android:id="@+id/spinner_porteador"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="25dp"
-                android:paddingBottom="10dp"
-                android:textColor="@color/colorTextLogin"/>
+                android:layout_height="wrap_content">
+                <EditText android:id="@+id/input_nombre_porteador"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="25dp"
+                    android:paddingBottom="15dp"
+                    android:inputType="text"
+                    android:hint="@string/nombre_porteador"
+                    android:textColorHint="@color/colorTextLogin"
+                    android:textColor="@color/colorTextLogin"/>
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_placas_tractor"
@@ -297,7 +310,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
                     android:paddingBottom="15dp"
-                    android:inputType="numberSigned"
+                    android:inputType="numberDecimal"
                     android:hint="@string/masa"
                     android:textColorHint="@color/colorTextLogin"
                     android:textColor="@color/colorTextLogin"/>
