--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
@@ -148,6 +148,35 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/nombre_almacen"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="25dp" />
+
+            <Spinner
+                android:id="@+id/spinner_almacen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/tipos_medidor"
+                android:paddingBottom="10dp"
+                android:textColor="@color/colorTextLogin"
+                android:textSize="30dp" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
