--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/plugins/morrisjs/morris.css" />
     <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css" />
-    <link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" />
     <link rel="stylesheet" href="assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
     <link rel="stylesheet" href="assets/plugins/multi-select/css/multi-select.css">
     <link rel="stylesheet" href="assets/plugins/jquery-spinner/css/bootstrap-spinner.css">
-    <link href="assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css">
     <link rel="stylesheet" href="assets/plugins/sweetalert/sweetalert.css" />
+    <link rel="stylesheet" href="assets/plugins/bootstrap-select/css/bootstrap-select.css" />
     <link rel="stylesheet" href="assets/plugins/nouislider/nouislider.min.css" />
     <!-- Custom Css -->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -519,7 +519,7 @@
             <asp:ContentPlaceHolder ID="ctRequisicion" runat="server" />
             <asp:ContentPlaceHolder ID="ctCompras" runat="server" />
             <asp:ContentPlaceHolder ID="ctOrdenCompra" runat="server" />
-        <asp:ContentPlaceHolder ID="ctProveedor" runat="server" />
+            <asp:ContentPlaceHolder ID="ctProveedor" runat="server" />
         </form>
     </section>
     <script src="../../assets/bundles/libscripts.bundle.js"></script>
@@ -551,10 +551,11 @@
     <script src="../../assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
     <script src="../../assets/plugins/sweetalert/sweetalert.min.js"></script>
     <script src="../../assets/bundles/mainscripts.bundle.js"></script>
+    <script src="../../assets/js/pages/forms/advanced-form-elements.js"></script>
     <script src="../../assets/js/pages/ui/dialogs.js"></script>
     <script src="../../assets/js/pages/index.js"></script>
     <script src="../../assets/js/pages/forms/basic-form-elements.js"></script>
-    <script src="../../assets/js/pages/forms/advanced-form-elements.js"></script>
+
 
 
 </body>
