--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -500,11 +500,12 @@
                     </li>
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
                         <ul class="ml-menu">
-                            <li><a href="normal-tables.html">Normal Tables</a></li>
-                            <li><a href="jquery-datatable.html">Jquery Datatables</a></li>
-                            <li><a href="editable-table.html">Editable Tables</a></li>
-                            <li><a href="table-color.html">Tables Color</a></li>
-                            <li><a href="table-filter.html">Tables Filter</a></li>
+                            <li><a href="normal-tables.html">Proveedores</a></li>
+                            <li><a href="jquery-datatable.html">Clientes</a></li>
+                            <li><a href="editable-table.html">Cuentas contables</a></li>
+                            <li><a href="table-color.html">Centro de costos</a></li>
+                            <li><a href="table-filter.html">Puntos de venta</a></li>
+                            <li><a href="table-filter.html">Equipo de transporte</a></li>
                         </ul>
                     </li>
                 </ul>
