--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Site.Master
@@ -501,8 +501,8 @@
                     <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
                         <ul class="ml-menu">
                             <li><a href="../../Catalogos/Proveedor.aspx">Proveedores</a></li>
-                            <li><a href="jquery-datatable.html">Clientes</a></li>
-                            <li><a href="../../Catalogos/CuentasContables.aspx">Cuentas contables</a></li>
+                            <li><a href="table-color.html">Clientes</a></li>
+                            <li><a href="../../Catalogos/Vista/CuentasContables.aspx">Cuentas contables</a></li>
                             <li><a href="table-color.html">Centro de costos</a></li>
                             <li><a href="table-filter.html">Puntos de venta</a></li>
                             <li><a href="table-filter.html">Equipo de transporte</a></li>
