--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -1,93 +1,92 @@
 ﻿@using MVC.Presentacion.Models.Seguridad
-
 @model  LoginModel
-    
+
 @{
     ViewBag.Title = "Iniciar sesión";
 }
+@{
+    Layout = null;
+}
 <link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="~/assets/plugins/bootstrap/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-<!-- Morris Chart Css-->
-<link rel="stylesheet" href="assets/plugins/morrisjs/morris.css" />
-<!-- Colorpicker Css -->
-<link rel="stylesheet" href="assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
-<!-- Multi Select Css -->
-<link rel="stylesheet" href="assets/plugins/multi-select/css/multi-select.css">
-<!-- Bootstrap Spinner Css -->
-<link rel="stylesheet" href="assets/plugins/jquery-spinner/css/bootstrap-spinner.css">
-<!-- Bootstrap Tagsinput Css -->
+<!-- Custom Css -->
+<link rel="stylesheet" href="~/assets/css/main.css">
+<link rel="stylesheet" href="~/assets/css/color_skins.css">
 <link rel="stylesheet" href="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css">
 <!-- Bootstrap Select Css -->
-<link rel="stylesheet" href="assets/plugins/bootstrap-select/css/bootstrap-select.css" />
-<!-- noUISlider Css -->
-<link rel="stylesheet" href="assets/plugins/nouislider/nouislider.min.css" />
-<!-- Custom Css -->
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/color_skins.css">
-<div class="authentication">
-    <div class="container">
-        <div class="col-md-12 content-center">
-            <div class="row">
-                <div class="col-lg-6 col-md-12">
-                    <div class="company_detail">
-                        <h4 class="logo">
-                            <img src="assets/images/LogoCorpKonsilio183x183.png" alt="" />
-                            Corporativo Konsilio
-                        </h4>
-                        <h3>SAGAS. Sistema de Administracion de Gas <strong>Ver. 1.0</strong></h3>
-                        <p>
-                        </p>
-                        <div class="footer">
-                            <hr>
-                            <ul></ul>
-                            <ul></ul>
+<link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
+<script src="~/assets/bundles/libscripts.bundle.js"></script>
+<script src="~/assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js -->
+
+
+@using (Html.BeginForm("Inicio", "Home", FormMethod.Post))
+{
+    <body class="theme-black">
+    <div class="authentication">
+        <div class="container">
+            <div class="col-md-12 content-center">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="company_detail">
+                            <h4 class="logo">
+                                <img src="assets/images/LogoCorpKonsilio183x183.png" alt="" />
+                                Corporativo Konsilio
+                            </h4>
+                            <h3>SAGAS. Sistema de Administracion de Gas <strong>Ver. 1.0</strong></h3>
+                            <p>
+                            </p>
+                            <div class="footer">
+                                <hr>
+                                <ul></ul>
+                                <ul></ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-5 col-md-12 offset-lg-1">
-                    <div class="card-plain">
-                        <div class="header">
-                            <h5>Inicio de Sesion</h5>
-                        </div>
-
-                        <div class="from">
-                            <div>
-                                <select name="slEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" data-show-subtext="true">
-                                  @foreach (var lst in Model.Empresas)
-                                  {
-
-                                  }
-                                </select>
-                                @*<asp:DropDownList CssClass="form-control selectpicker z-index show-tick" data-live-search="true" data-show-subtext="true" runat="server" ID="ddlRazon"></asp:DropDownList>*@
-                            </div>
-                            <br />
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="usuario" name="Email" />
-                                @*<asp:TextBox runat="server" ID="Email" CssClass="form-control" placeholder="Usuario" />*@
-                                <span class="input-group-addon"><i class="zmdi zmdi-account-circle"></i></span>
-                            </div>
-                            <div class="input-group">
-                                <input type="password" class="form-control" placeholder="Contraseña" name="Password" />
-                                @*<asp:TextBox runat="server" ID="Password" TextMode="Password" class="form-control" placeholder="Contraseña" />*@
-                                <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
+                    <div class="col-lg-5 col-md-12 offset-lg-1">
+                        <div class="card-plain">
+                            <div class="header">
+                                <h5>Inicio de Sesion</h5>
                             </div>
 
-                        </div>
-                        <div class="footer">
-                            <input id="btnIniciar" type="submit" value="IniciarSesion" class="btn btn-primary btn-round btn-block" />
-                            @*<asp:Button ID="btnIniciar" runat="server" OnClick="btnIniciar_Click" class="btn btn-primary btn-round btn-block" Text="Iniciar" />*@
+                            <div class="from">
+                                <div>
+                                    <select name="IdEmpresa" class="form-control selectpicker z-index show-tick" data-live-search="true" >
+                                        @foreach (var lst in ViewBag.listaEmpresas)
+                                        {
+                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                        }
+                                    </select>
+                                    @*<asp:DropDownList CssClass="form-control selectpicker z-index show-tick" data-live-search="true" data-show-subtext="true" runat="server" ID="ddlRazon"></asp:DropDownList>*@
+                                </div>
+                                <br />
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="usuario" name="Usuario" />
+                                    @*<asp:TextBox runat="server" ID="Email" CssClass="form-control" placeholder="Usuario" />*@
+                                    <span class="input-group-addon"><i class="zmdi zmdi-account-circle"></i></span>
+                                </div>
+                                <div class="input-group">
+                                    <input type="password" class="form-control" placeholder="Contraseña" name="Password" />
+                                    @*<asp:TextBox runat="server" ID="Password" TextMode="Password" class="form-control" placeholder="Contraseña" />*@
+                                    <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
+                                </div>
 
-                        </div>
-                        <div class="alert alert-danger" id="divMensaje" hidden="hidden">
-                            <input ID="lblMensaje" />
-                        </div>
+                            </div>
+                            <div class="footer">
+                                <input id="btnIniciar" type="submit" value="Inicio" class="btn btn-primary btn-round btn-block" />
+                                @*<asp:Button ID="btnIniciar" runat="server" OnClick="btnIniciar_Click" class="btn btn-primary btn-round btn-block" Text="Iniciar" />*@
 
+                            </div>
+                            <div class="alert alert-danger" id="divMensaje" hidden="hidden">
+                                <input ID="lblMensaje" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-
+    </body>
+<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/color_skins.css">
+}
